plain + G KMeans incorporated

--- a/k_means.ipynb
+++ b/k_means.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#run src_Gh_kmeans.c => pauses => run ipynb => continue src\n",
     "from sklearn.cluster import KMeans\n",
     "import numpy as np\n",
     "import math\n",
